v 2.0 - added auto movements slides (setTimeout) - added new buttons stop and play - added new slides

--- a/index.html
+++ b/index.html
@@ -15,8 +15,15 @@
             <img src="img/Sense8it_beautiful_girl_angel_calming_look_deep_eyes_aura_and_c_65a4a9f4-6069-45e4-b41a-269b32717bf7.png" alt="">
             <img src="img/Sense8it_beautiful_girl_angel_calming_look_deep_eyes_aura_and_c_caf100f7-8cc6-4a61-836a-177dd019bd35.png" alt="">
             <img src="img/Sense8it_beautiful_woman_angel_calming_look_deep_eyes_aura_and__714e7875-d00b-4e06-acdb-58ac6a575a7e.png" alt="">
+            <img src="img/Sense8it_beautiful_woman_angel_calming_look_deep_eyes_aura_and__70f1828a-2795-4672-a83f-d2ef4f48da99.png" alt="">
+            <img src="img/Sense8it_beautiful_woman_angel_calming_look_deep_eyes_aura_and__7182e266-918b-4065-a186-0cf3586499c6.png" alt="">
+            <img src="img/Sense8it_beautiful_woman_angel_calming_look_deep_eyes_aura_and__43786fdc-0917-480a-a3ae-33e302f9f4b8.png" alt="">
+
         </div>
         <div class="buttons">
+            <input type="button" value="=" class="stop">
+            <input type="button" value="|>" class="play">
+            <br><br>
             <input type="button" value="назад" class="prev">
             <input type="button" value="вперед" class="next">
         </div>
