v 2.1 - fixed stop bug, when the automatic sliding did not stop, after clicking on stop and at the same time repeatedly clicking on prev, next. - code optimization - added new slides

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <body>
     <div id="gallery">
         <div class="photos">
-            <img src="img/Sense8it_beautiful_girl_angel_calming_look_deep_eyes_aura_and_c_3079cf73-685a-49bc-8b0c-cafc02c2326a.png" class="showed" alt="">
-            <img src="img/Sense8it_beautiful_girl_angel_calming_look_deep_eyes_aura_and_c_57ad5025-91f9-4347-8776-2c7210a92484.png" alt="">
-            <img src="img/Sense8it_beautiful_girl_angel_calming_look_deep_eyes_aura_and_c_65a4a9f4-6069-45e4-b41a-269b32717bf7.png" alt="">
-            <img src="img/Sense8it_beautiful_girl_angel_calming_look_deep_eyes_aura_and_c_caf100f7-8cc6-4a61-836a-177dd019bd35.png" alt="">
-            <img src="img/Sense8it_beautiful_woman_angel_calming_look_deep_eyes_aura_and__714e7875-d00b-4e06-acdb-58ac6a575a7e.png" alt="">
-            <img src="img/Sense8it_beautiful_woman_angel_calming_look_deep_eyes_aura_and__70f1828a-2795-4672-a83f-d2ef4f48da99.png" alt="">
-            <img src="img/Sense8it_beautiful_woman_angel_calming_look_deep_eyes_aura_and__7182e266-918b-4065-a186-0cf3586499c6.png" alt="">
-            <img src="img/Sense8it_beautiful_woman_angel_calming_look_deep_eyes_aura_and__43786fdc-0917-480a-a3ae-33e302f9f4b8.png" alt="">
+            <img src="img/img_0.png" class="showed" alt="">
+            <img src="img/img_1.png" alt="">
+            <img src="img/img_2.png" alt="">
+            <img src="img/img_3.png" alt="">
+            <img src="img/img_4.png" alt="">
+            <img src="img/img_5.png" alt="">
+            <img src="img/img_6.png" alt="">
+            <img src="img/img_7.png" alt="">
+            <img src="img/img_8.png" alt="">
+            <img src="img/img_9.png" alt="">
 
         </div>
         <div class="buttons">
