v 2.2 - removed a delay in which the buttons - prev and next were inactive after pressing stop - the prev and next buttons have been replaced with a checkbox - changed css - movement and movementLoop renamed in play and playLoop

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
         </div>
         <div class="buttons">
-            <input type="button" value="=" class="stop">
-            <input type="button" value="|>" class="play">
+            <label for="">auto play</label>
+            <input type="checkbox" name="" id="stop_play" value="" checked />
             <br><br>
-            <input type="button" value="назад" class="prev">
-            <input type="button" value="вперед" class="next">
+            <input type="button" value="<< prev" class="prev">
+            <input type="button" value="next >>" class="next">
         </div>
     </div>
 
