v 2.3 - added localStorage for checkbox change and active img - fixed checkbox bugs - edited debug code for console log

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="gallery">
         <div class="photos">
-            <img src="img/img_0.png" class="showed" alt="">
+            <img src="img/img_0.png" alt="">
             <img src="img/img_1.png" alt="">
             <img src="img/img_2.png" alt="">
             <img src="img/img_3.png" alt="">
@@ -23,8 +23,8 @@
 
         </div>
         <div class="buttons">
-            <label for="">auto play</label>
-            <input type="checkbox" name="" id="stop_play" value="" checked />
+            <label>auto play</label>
+            <input type="checkbox" id="stop_play">
             <br><br>
             <input type="button" value="<< prev" class="prev">
             <input type="button" value="next >>" class="next">
